--- a/index.html
+++ b/index.html
@@ -197,17 +197,17 @@
   <div class="osito o4">🧸</div>
 
   <!-- 4 GLOBITOS -->
-  <div class="globito g1">¡Eres especial! ✨</div>
-  <div class="globito g2">Te quiero mucho ❤️</div>
-  <div class="globito g3">¡Sonríe! 😊</div>
-  <div class="globito g4">Eres único 🌟</div>
+  <div class="globito g1">Eres especial wawas!! ✨</div>
+  <div class="globito g2">Te amo muito ❤️</div>
+  <div class="globito g3">SONRIEEEEEEEEEEEE 😊</div>
+  <div class="globito g4">Eres única 🌟</div>
 
   <!-- CARTA INTERACTIVA -->
   <div class="carta-contenedor">
     <div class="carta" id="carta">
       <div class="carta-frente"></div>
       <div class="carta-interior">
-        ¡Hola! 🌸<br>Eres increíblemente importante.
+        Holiiiii 🌸<br>Eres increíblemente importante.
       </div>
     </div>
   </div>
@@ -215,7 +215,7 @@
   <!-- MENSAJE SECRETO -->
   <div class="mensaje" id="mensaje">
     <h3 style="color: #ff6b8b;">¡Sorpresa!</h3>
-    <p>Hoy es tu día para brillar ✨</p>
+    <p>NUEVO MESESITO JUNTOS JIJI ✨</p>
     <button onclick="cerrarMensaje()">Cerrar</button>
   </div>
 
