--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   <!-- 4 GLOBITOS -->
   <div class="globito g1">Eres especial wawas!! ✨</div>
   <div class="globito g2">Te amo muito ❤️</div>
-  <div class="globito g3">SONRIEEEEEEEEEEEE 😊</div>
+  <div class="globito g3">SONRIEEEEEEEEEE 😊</div>
   <div class="globito g4">Eres única 🌟</div>
 
   <!-- CARTA INTERACTIVA -->
